--- a/app/src/main/res/layout/activity_report_issue.xml
+++ b/app/src/main/res/layout/activity_report_issue.xml
@@ -4,68 +4,68 @@
     android:id="@+id/activity_report_issue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="0dp"
     android:background="@drawable/bghomemobileappblur"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="-15dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
     tools:context="com.example.dadouglas.hchealth.ReportIssueActivity">
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="40dp"-->
-        <!--android:background="#aeaea8"-->
-        <!--android:padding="10dp"-->
-        <!--android:text="Report an issue"-->
-        <!--android:textColor="@android:color/white"-->
-        <!--android:id="@+id/textView" />-->
-
-    <!--<EditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="35dp"-->
-        <!--android:background="@android:color/darker_gray"-->
-        <!--android:hint="Enter a Business, Place or Address"-->
-        <!--android:textColor="@android:color/black" />-->
-
-    <!--<EditText-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="35dp"-->
-        <!--android:background="@android:color/darker_gray"-->
-        <!--android:hint="Enter a Business, Place or Address"-->
-        <!--android:textColor="@android:color/black" />-->
-
-    <!--<TextView-->
-        <!--android:text="TextView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/textView"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_marginLeft="109dp"-->
-        <!--android:layout_marginStart="109dp"-->
-        <!--android:layout_marginTop="60dp"-->
-        <!--android:id="@+id/textView2" />-->
-
     <ImageView
-        android:src="@drawable/homenavbg"
+        android:id="@+id/homenavbg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp">
-    </ImageView>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:paddingTop="0dp"
+        android:src="@drawable/homenavbg"></ImageView>
 
-    <!--<TextView-->
-        <!--android:text="Report an issue"-->
-        <!--android:paddingLeft="15dp"-->
-        <!--android:textColor="#aeaea8"-->
-        <!--android:background="@android:color/black"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="40dp"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:layout_marginStart="15dp"-->
-        <!--android:layout_marginTop="0dp"-->
-        <!--android:id="@+id/textView3"-->
-        <!--android:textSize="25dp"/>-->
+
+    <TextView
+        android:id="@+id/report_an_issue_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/homenavbg"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/black"
+        android:paddingLeft="15dp"
+        android:paddingTop="5dp"
+        android:text="Report an issue"
+        android:textColor="#aeaea8"
+        android:textSize="25dp" />
+
+    <EditText
+        android:id="@+id/enter_business_navbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/report_an_issue_nav_view"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/darker_gray"
+        android:hint="Enter a Business, Place or Address"
+        android:paddingLeft="15dp"
+        android:textSize="15dp" />
+
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/enter_business_navbar"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="3dp"
+        android:background="@android:color/darker_gray"
+        android:gravity="center_vertical|left"
+        android:paddingLeft="10dp"
+        android:text="Category:"
+        android:textSize="15dp" />
+
+    <Spinner
+        android:id="@+id/subject_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/enter_business_navbar"
+        android:background="@android:color/black" />
 </RelativeLayout>
