--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
 
             <!-- Column 2 -->
             <TextView
+                android:id="@+id/reportIssuesId"
                 android:layout_weight=".3"
                 android:background="@android:color/black"
                 android:drawableTop="@drawable/reportissues"
