--- a/app/src/main/res/layout/activity_report_issue.xml
+++ b/app/src/main/res/layout/activity_report_issue.xml
@@ -49,7 +49,8 @@
 
 
     <TextView
-        android:layout_width="fill_parent"
+        android:id="@+id/enter_business_field"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/enter_business_navbar"
         android:layout_marginBottom="5dp"
@@ -62,10 +63,25 @@
         android:text="Category:"
         android:textSize="15dp" />
 
-    <Spinner
-        android:id="@+id/subject_spinner"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/enter_business_navbar"
-        android:background="@android:color/black" />
+    <EditText
+        android:id="@+id/emailAddressField"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/enter_business_field"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/darker_gray"
+        android:gravity="center"
+        android:hint="Email Address (optional)"
+        android:textSize="15dp" />
+
+    <!--<EditText-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:layout_alignRight="@id/emailAddressField"-->
+    <!--android:layout_below="@+id/enter_business_field"-->
+    <!--android:background="@android:color/darker_gray"-->
+    <!--android:text="Testing" />-->
 </RelativeLayout>
