--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,13 +88,13 @@
             <TextView
                 android:layout_weight=".3"
                 android:background="@android:color/black"
+                android:clickable="true"
                 android:drawableTop="@drawable/shelterservices"
                 android:gravity="center"
+                android:onClick="startAnimalServicesActivity"
                 android:padding="5dip"
                 android:text="Animal Services"
-                android:textColor="#000000"
-                android:clickable="true"
-                android:onClick="startAnimalServicesActivity"/>
+                android:textColor="#000000" />
         </TableRow>
 
         <!-- Row 4  -->
