--- a/app/src/main/res/layout/gridview_test.xml
+++ b/app/src/main/res/layout/gridview_test.xml
@@ -8,9 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bghomemobileappblurcolwhite"
-        android:columnCount="2">
+        android:columnCount="2"
+        android:columnOrderPreserved="true"
+        android:padding="3dp"
+        android:rowOrderPreserved="true">
 
-        <TextView />
 
         <TextView
             android:layout_width="match_parent"
@@ -20,60 +22,48 @@
 
         <TextView
             android:layout_column="0"
+            android:layout_gravity="bottom|center"
             android:layout_row="3"
-            android:background="@drawable/healthwellness" />
-
-        <TextView
-            android:layout_column="0"
-            android:layout_row="4"
-            android:background="@drawable/healthwellness" />
-
-        <TextView
-            android:layout_column="1"
-            android:layout_row="4"
-            android:background="@drawable/healthwellness" />
-
-        <TextView
-            android:layout_column="0"
-            android:layout_row="5"
-            android:background="@drawable/healthwellness" />
-
-        <TextView
-            android:layout_column="1"
-            android:layout_row="5"
-            android:background="@drawable/healthwellness" />
+            android:background="@drawable/foodestablishment"
+            android:gravity="bottom|center"
+            android:text="Food Establishments"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_column="1"
             android:layout_row="3"
+            android:background="@drawable/reportissues" />
+        <!--<TextView -->
+        <!--android:text="testinggg"-->
+        <!--android:textSize="20dp"-->
+        <!--android:gravity="center"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_row="5"-->
+        <!--android:background="#fff"/>-->
+
+        <TextView
+            android:layout_column="0"
+            android:layout_row="4"
             android:background="@drawable/healthwellness" />
 
+        <TextView
+            android:layout_column="1"
+            android:layout_row="4"
+            android:background="@drawable/shelterservices" />
 
-        <!--<TextView-->
-        <!--android:background="@drawable/healthwellness"-->
-        <!--android:text="testing"-->
-        <!--android:gravity="bottom|center"-->
-        <!--android:textSize="30dp"/>-->
-        <!--<TextView-->
-        <!--android:background="@drawable/healthwellness"-->
-        <!--android:text="testing"-->
-        <!--android:gravity="bottom|center"-->
-        <!--android:textSize="30dp"/>-->
-        <!--<TextView-->
-        <!--android:background="@drawable/healthwellness"-->
-        <!--android:text="testing"-->
-        <!--android:gravity="bottom|center"-->
-        <!--android:textSize="30dp"-->
-        <!--android:layout_column="0"-->
-        <!--android:layout_row="1"/>-->
-        <!--<TextView-->
-        <!--android:background="@drawable/healthwellness"-->
-        <!--android:text="testing"-->
-        <!--android:gravity="bottom|center"-->
-        <!--android:textSize="30dp"-->
-        <!--android:layout_column="0"-->
-        <!--android:layout_row="2"/>-->
+        <TextView
+            android:layout_column="1"
+            android:layout_row="5"
+            android:background="@drawable/mc" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_column="0"
+            android:layout_row="5"
+            android:background="@drawable/preparednessresponse" />
+
 
     </GridLayout>
 
