Added image field to activity_report_issue.xml

--- a/app/src/main/res/layout/activity_report_issue.xml
+++ b/app/src/main/res/layout/activity_report_issue.xml
@@ -41,7 +41,7 @@
         android:layout_below="@id/report_an_issue_nav_view"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="13dp"
         android:background="@android:color/darker_gray"
         android:hint="Enter a Business, Place or Address"
         android:paddingLeft="15dp"
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/enter_business_field"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="3dp"
@@ -80,9 +80,9 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_below="@+id/choose_category_field"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="0dp"
         android:background="@android:color/darker_gray"
         android:hint="Email Address (optional)"
@@ -102,7 +102,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@+id/emailAddressField"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="0dp"
@@ -116,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/firstNameField"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="0dp"
@@ -130,7 +130,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/firstNameField"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="0dp"
@@ -163,10 +163,41 @@
         android:layout_below="@id/descriptionTextField"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:background="@color/colorPrimaryDark"
         android:text="Submit Issue"
         android:textColor="#ffffff" />
+
+    <TextView
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/emailAddressField"
+        android:layout_alignBottom="@+id/emailAddressField"
+        android:layout_alignEnd="@+id/choose_category_field"
+        android:layout_alignRight="@+id/choose_category_field"
+        android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/emailAddressField"
+        android:layout_toRightOf="@+id/emailAddressField"
+        android:adjustViewBounds="true"
+        android:background="@android:color/darker_gray"
+        android:drawableRight="@drawable/camera2"
+        android:gravity="left|center"
+        android:padding="10dp"
+        android:text="Attach Image"
+        android:textSize="13dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/descriptionTextField"
+        android:layout_alignRight="@+id/descriptionTextField"
+        android:layout_below="@+id/descriptionTextField"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
+        android:text="1000 characters left"
+        android:textSize="12dp" />
 
     <!--<TableRow-->
     <!--android:layout_width="match_parent"-->
