--- a/app/src/main/res/layout/gridview_test.xml
+++ b/app/src/main/res/layout/gridview_test.xml
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:layout_columnSpan="2"
-            android:background="@drawable/drawable" />
+            android:background="@drawable/drawable"
+            android:layout_marginTop="5dp"/>
 
         <TextView
             android:layout_column="0"
@@ -65,14 +66,54 @@
 
         <TextView
             android:layout_column="1"
+            android:layout_gravity="bottom|center"
+            android:layout_row="4"
+            android:width="207dp"
+            android:height="30dp"
+            android:background="@android:color/white"
+            android:gravity="center"
+            android:text="Animal Services"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_column="1"
+            android:layout_marginTop="3dp"
             android:layout_row="5"
             android:background="@drawable/mc" />
 
         <TextView
+            android:layout_column="1"
+            android:layout_gravity="bottom|center"
+            android:layout_row="5"
+            android:width="207dp"
+            android:height="30dp"
+            android:background="@android:color/white"
+            android:gravity="center"
+            android:text="Mosquito Concerns"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12dp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/textView2"
             android:layout_column="0"
+            android:layout_marginTop="3dp"
             android:layout_row="5"
             android:background="@drawable/preparednessresponse" />
+        <TextView
+            android:layout_column="0"
+            android:layout_gravity="bottom|center"
+            android:layout_row="5"
+            android:width="207dp"
+            android:height="30dp"
+            android:background="@android:color/white"
+            android:gravity="center"
+            android:text="Preparedness &amp; Response"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView3"
@@ -80,6 +121,19 @@
             android:layout_marginTop="3dp"
             android:layout_row="4"
             android:background="@drawable/healthwellness" />
+
+        <TextView
+            android:layout_column="0"
+            android:layout_gravity="bottom|center"
+            android:layout_row="4"
+            android:width="207dp"
+            android:height="30dp"
+            android:background="@android:color/white"
+            android:gravity="center"
+            android:text="Health &amp; Wellness"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12dp"
+            android:textStyle="bold" />
 
 
     </GridLayout>
