ReportIssueActivity.java: Added option to select photo from the library or take a photo when image picture is clicked in activity_report_issue.xml.

--- a/app/src/main/res/layout/activity_report_issue.xml
+++ b/app/src/main/res/layout/activity_report_issue.xml
@@ -187,6 +187,7 @@
         android:background="@android:color/darker_gray"
         android:drawableRight="@drawable/camera2"
         android:gravity="left|center"
+        android:onClick="ChooseGetPhotoOption"
         android:padding="10dp"
         android:text="Attach Image"
         android:textSize="13dp" />
